fixing layout issues for some screens

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ footer ion-icon {
     font-size: 27px;
 }
 footer input {
-    width: 300px;
+    width: 100%;
     font-size: 18px;
     color: #000000;
     border: none;
@@ -192,6 +192,7 @@ main > * > * {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    width: 75%;
 }
 .directMessage p {
     font-size: 14px;
